--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -4148,6 +4148,8 @@ p {
                 font-weight: 600;
                 vertical-align: top;
                 transition: all 0.3s ease;
+                text-decoration: none;
+                line-height: 1.6;
 
                 i {
                     margin-right: 10px;
@@ -5768,6 +5770,14 @@ p {
     }
 }
 
+.noPaddingTop {
+    padding-top: 0 !important;
+}
+
+.noMarginBottom {
+    margin-bottom: 0 !important;
+}
+
 .industries-section {
     padding: 3rem 0px;
 
@@ -5784,16 +5794,32 @@ p {
             padding-right: 0 !important;
         }
     }
+
+
+    &.full-width {
+        width: 100vw;
+        position: relative;
+        left: 50%;
+        right: 50%;
+        margin-left: -50vw;
+        margin-right: -50vw;
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
     
     
     .section-title {
-        padding-bottom: 100px;
+        //padding-bottom: 100px;
         text-align: center;
 
         p {
+            color: $mainColor;
             font-size: 18px;
             font-weight: 600;
             line-height: 210.2%;
+            margin-bottom: 0 !important;
         }
     }
 
@@ -5801,16 +5827,12 @@ p {
         padding-bottom: 1rem;
 
         h2 {
-            margin: 0px 0px 45px;
-        }
-
-        p {
-            font-weight: 600;
+            margin: 20px 0px !important;
         }
     }
 
     .spacer {
-        margin-bottom: 45px;
+        margin-bottom: 1rem;
     }
 
     .item-box {
@@ -5819,7 +5841,7 @@ p {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 1.5rem 15px;
+        padding: 1.5rem;
         text-align: center;
         border-radius: 10px;
         -webkit-border-radius: 10px;
@@ -5875,7 +5897,18 @@ p {
     }
 
 
+    &.smallerIcons {
+        .item-box {
+            img {
+                max-width: 26px;
+                //max-height: 56px;
+            }
+        }
+    }
+
+
     &.lightBlue {
+        
         .item-box {
             background-color: $communityColor;
             border: 2px solid $communityColor;
@@ -5884,6 +5917,10 @@ p {
                 border-color: $mainColor;
             }
         }
+    }
+
+    &.lightBG:not(.full-width) {
+        border-radius: 15px;
     }
 }
 
@@ -6917,7 +6954,7 @@ p {
 }
 
 .team-section {
-    padding: 100px 0px 50px;
+    padding: 2rem 0;
 
     .section-title {
         padding-bottom: 80px;
@@ -7004,6 +7041,10 @@ p {
                 li {
                     display: inline-block;
                     margin: 0px 10px 10px 0px;
+
+                    a {
+                        display: block;
+                    }
 
                     img {
                         max-width: 24px;
@@ -7885,10 +7926,15 @@ p {
 
 
     .wp-block-media-text {
+        margin: 2rem 0;
 
         &.gradient {
             background: $blueGradient;
-            border-radius: $borderRadius; 
+            border-radius: $borderRadius;
+
+            .wp-block-media-text__content {
+                color: #fff;
+            }
         }
 
         &.lightBG {
@@ -7902,7 +7948,11 @@ p {
             &.wide {
                 margin-left: -12rem;
                 margin-right: -12rem;
-                padding: 1rem;
+                padding: 2rem;
+
+                .wp-block-media-text__content {
+                    padding: 0 3vw !important;
+                }
             }
         }
 
@@ -7920,12 +7970,22 @@ p {
 
 
         .wp-block-media-text__content {
-            padding: 0 4% !important;
+            //padding: 0 4% !important;
+            padding-right: 0;
 
             @media screen and (max-width: $sm-breakpoint600) {
                 & {
+
+                    padding-right: 8%;
+
                     text-align: center;
                     padding-bottom: 1rem !important;
+
+                    .wp-block-image {
+                        img {
+                            margin: auto !important;
+                        }
+                    }
 
                     .wp-block-buttons {
                         & > .wp-block-button {
@@ -7936,12 +7996,34 @@ p {
             }
         }
 
+        &.has-media-on-the-right {
 
-       &.has-media-on-the-right {
             .wp-block-media-text__content {
-                //padding-left: 0 !important;
+                padding-right: 8%;
+                padding-left: 0;
+                //text-align: right;
+                
+
+                @media screen and (max-width: $sm-breakpoint600) {
+                    & {
+                        text-align: center;
+                        padding-left: 8%;
+                    }
+                }
             }
+
+            
+        }
+
+
+       h3.wp-block-heading {
+        margin: 10px 0;
        }
+
+       h2.wp-block-heading {
+        margin: 18px 0;
+       }
+
     }
 
     .wp-block-media-text.has-background {
@@ -8065,45 +8147,30 @@ p {
 
         h1 {
             font-size: 58px;
-            //color: #0c0726;
             font-weight: 700;
             margin: 30px 0px 15px;
         }
 
         h2 {
-            /*
-            color: #0c0726;
-            font-size: 42px;
-            font-weight: 700;
-            */
-            margin: 30px 0px 15px;
+            margin: 3rem 0px 2rem;
         }
 
         h3 {
-            color: #0c0726;
-            //font-size: 36px;
             font-weight: 700;
-            margin: 25px 0px 10px;
+            margin: 25px 0px;
         }
 
         h4 {
-            /*
-            color: #0c0726;
-            font-size: 28px;
-            font-weight: 700;
-            */
-            margin: 20px 0px 10px;
+            margin: 20px 0px;
         }
 
         h5 {
-            //color: #0c0726;
             font-size: 24px;
             font-weight: 700;
             margin: 20px 0px 10px;
         }
 
         h6 {
-            //color: #0c0726;
             font-size: 18px;
             font-weight: 700;
             margin: 20px 0px 10px;
@@ -8155,6 +8222,7 @@ p {
             border: 2px solid $mainColor;
             padding: 10px 20px;
             font-size: 16px;
+            transition: all .3s ease;
 
             &:hover {
                 background-color: #fff;
@@ -10342,7 +10410,6 @@ a.list_load_more_btn {
 }
 
 
-
 ul.upgrade_path_list {
     list-style: none;
     padding: 0;
@@ -11466,6 +11533,21 @@ ul.upgrade_path_list {
     margin-bottom: 1rem;
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
+
+    &.blueOverlay {
+        color: white;
+        
+        .overlay-gradient {
+
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: $mainColor;
+            top: 0;
+            left: 0;
+            opacity: 0.75;
+        }
+    }
 }
 
 .nc_text_as_separator {
@@ -11866,7 +11948,6 @@ ul.upgrade_path_list {
     &.vc_sep_width_20 {
         max-width: 85px !important;
 
-
         .vc_sep_line {
             height: 3px !important;
             border-top-width: 0 !important;
@@ -11874,19 +11955,21 @@ ul.upgrade_path_list {
         }
 
         &.white {
-
             .vc_sep_line {
                 background: #fff !important;
-            }
-
-            
+            }     
         }
 
-
     }
+}
 
 
-    
+hr.wp-block-separator.nc-separator {
+    max-width: 85px !important;
+
+    height: 3px !important;
+    border-top-width: 0 !important;
+    background: $blueGradient2;
 }
 
 
@@ -11901,9 +11984,6 @@ ul.upgrade_path_list {
     height: 100%;
     padding-bottom: 1rem;
 
-
-    
-    
     
     a, .link_replacement {
         height: 100%;
@@ -11972,6 +12052,21 @@ ul.upgrade_path_list {
             }
         }
 
+    }
+
+
+    &.hub_release {
+        a {
+            background: #fff url("../img/confetti-background.svg");
+            background-repeat: no-repeat;
+            background-position: right -17px bottom -76px;
+
+            &:hover {
+                background: $communityColor url("../img/confetti-background.svg");
+                background-repeat: no-repeat;
+                background-position: right -17px bottom -96px;
+            }
+        }
     }
 
 
@@ -12515,11 +12610,23 @@ ul.list_compliance {
     justify-content: center;
 }
 
-.imageRoundShadow, .wp-block-image.size-full {
+.imageRoundShadow /*, .wp-block-image.size-full*/ {
     img {
         border-radius: $borderRadius;
         box-shadow: $boxShadow;
     }
+}
+
+.wp-block-video.imageRoundShadow {
+    border-radius: $borderRadius;
+    box-shadow: $boxShadow;
+    overflow: hidden;
+}
+
+.wp-block-image.size-full.no-box-shadow {
+    img {
+        box-shadow: none;
+    } 
 }
 
 
@@ -15900,6 +16007,17 @@ section.all_features {
         font-weight: bold !important;
         display: inline !important;
     }
+
+    .ez-toc-toggle {
+        label {
+            border-color: $textColor;
+            color: $textColor;
+
+            .ez-toc-icon-toggle-span {
+                fill: $textColor;
+            }
+        }
+    }
 }
 
 
@@ -15929,6 +16047,10 @@ section.all_features {
                 color: $mainColor;
                 left: 0;
             }
+
+            h2 {
+                margin: 0px 0 18px 0;
+            }
     
             p {
                 margin: 0 !important;
@@ -15954,11 +16076,49 @@ section.all_features {
 }
 
 
+.yt_premiere_col {
+
+    .vc_column-inner {
+        background: $communityColor;
+        border-radius: $borderRadius;
+        position: relative;
+        overflow: hidden;
+        background-size: cover !important;
+        color:#fff;
+        aspect-ratio: 16/9;
+        box-shadow: $boxShadow;
+        
+        &:before {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 130, 201, 0.55);
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        .youtube-icon {
+            img {
+                max-height: 42px;
+            }
+            
+        }
+    }
+
+}
+
+
 .wp-block-columns {
     .wp-block-column {
         img {
             margin-bottom: 0 !important;
         }
+    }
+
+
+    &.align-items-center {
+        align-items: center !important;
     }
 }
 
@@ -15982,6 +16142,11 @@ section.all_features {
 }
 
 
+.logo-section-separator {
+    img {
+        width: 150px;
+    } 
+}
 
 
 
