--- a/assets/fonts.scss
+++ b/assets/fonts.scss
@@ -12,6 +12,7 @@
          url('../fonts/m-plus-1-v6-japanese-regular.svg#MPLUS1') format('svg'); /* Legacy iOS */
 
     unicode-range: U+4e00-9fbf, U+3040-309f, U+30a0-30ff;
+    font-display: swap;
 }
   
 /* m-plus-1-700 - japanese */
@@ -27,7 +28,8 @@
          url('../fonts/m-plus-1-v6-japanese-700.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/m-plus-1-v6-japanese-700.svg#MPLUS1') format('svg'); /* Legacy iOS */
 
-    unicode-range: U+4e00-9fbf, U+3040-309f, U+30a0-30ff;     
+    unicode-range: U+4e00-9fbf, U+3040-309f, U+30a0-30ff;
+    font-display: swap;
 }
 
 @font-face {
@@ -41,6 +43,8 @@
           url('../fonts/OpenSansRegular.woff') format('woff'), /* Modern Browsers */
           url('../fonts/OpenSansRegular.ttf') format('truetype'), /* Safari, Android, iOS */
           url('../fonts/OpenSansRegular.svg#OpenSans') format('svg'); /* Legacy iOS */
+
+     font-display: swap;     
 }
 
 @font-face {
@@ -54,6 +58,8 @@
           url('../fonts/OpenSansSemiBold.woff') format('woff'), /* Modern Browsers */
           url('../fonts/OpenSansSemiBold.ttf') format('truetype'), /* Safari, Android, iOS */
           url('../fonts/OpenSansSemiBold.svg#OpenSans') format('svg'); /* Legacy iOS */
+
+     font-display: swap;
 }
 
 
@@ -68,4 +74,6 @@
           url('../fonts/OpenSansBold.woff') format('woff'), /* Modern Browsers */
           url('../fonts/OpenSansBold.ttf') format('truetype'), /* Safari, Android, iOS */
           url('../fonts/OpenSansBold.svg#OpenSans') format('svg'); /* Legacy iOS */
+
+     font-display: swap;
 }
