Security update + pricing page CSS
Signed-off-by: Peter Mocanu <info@petermocanu.com>

--- a/assets/header.scss
+++ b/assets/header.scss
@@ -152,6 +152,10 @@ header {
                     z-index: 2;
                     top: 0;
 
+                    &.disabled {
+                        display: none;
+                    }
+
                     &.owl-prev {
                         left: 2rem;
                     }
