--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -10751,8 +10751,8 @@ ul.upgrade_path_list {
 
                 th, td {
                     width: 25%;
-                    //width: 22%;
                     padding: 1rem 1.6rem;
+                    position: relative;
 
                     &:first-child {
                         text-align: right;
@@ -10770,6 +10770,47 @@ ul.upgrade_path_list {
                     p:empty {
                         display: none;
                     }
+
+
+                    .tooltip {
+                        visibility: hidden;
+                        width: 100%;
+                        background-color: #555;
+                        color: #fff;
+                        text-align: center;
+                        padding: 5px 0;
+                        border-radius: 6px;
+                        position: absolute;
+                        z-index: 3;
+                        bottom: 130%;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        padding: 10px;
+                        opacity: 0;
+                        transition: all 0.3s;
+
+                        &:after {
+                            content: "";
+                            position: absolute;
+                            top: 100%;
+                            left: 50%;
+                            margin-left: -5px;
+                            border-width: 5px;
+                            border-style: solid;
+                            border-color: #555 transparent transparent transparent;
+                        }
+
+                      }
+
+                      &:hover {
+                        .tooltip {
+                            bottom: 92%;
+                            visibility: visible;
+                            opacity: 1;
+                        }
+                      }
+
+
                 }
 
                 th {
@@ -10848,6 +10889,31 @@ ul.upgrade_path_list {
                     th, td {
                         width: 20%;
                     }
+                
+                    &.table_see_more {
+
+                        td {
+                            a.toggle_items {
+                                color: $textColor;
+                                i {
+                                    color: $textColor;
+                                }
+                            }
+                            
+                        }
+                    }
+                
+                }
+
+
+                @media screen and (max-width: $tablet-breakpoint) {
+                    & { //table
+                        tr {
+                            td {
+                                width: 25% !important;
+                            }
+                        }
+                    }
                 }
 
             }
@@ -10862,7 +10928,7 @@ ul.upgrade_path_list {
                 }    
             }
 
-            @media screen and (max-width: $md-breakpoint) {
+            @media screen and (max-width: $tablet-breakpoint) {
                 & { //table
                     width: 100%;
 
@@ -10880,7 +10946,6 @@ ul.upgrade_path_list {
                                 text-align: center;
                                 border-bottom: 1px solid #DFDFDF;
                             }
-
                         }
 
                         td {
@@ -10894,14 +10959,18 @@ ul.upgrade_path_list {
                             }
                         }
 
-                        &.category {
-                            th:first-child {
+
+
+
+                        &.category, &.table_see_more {
+
+                            th:first-child, td:first-child {
                                 width: 100% !important;
                                 display: block;
                                 text-align: center;
                             }
 
-                            th:nth-child(2) {
+                            th:nth-child(2), td:nth-child(2) {
                                 width: auto;
                                 display: none;
                             }
@@ -10923,65 +10992,97 @@ ul.upgrade_path_list {
 
             &.table_head {
 
+                .inner-wrapper-sticky {
+                    z-index: 9;
+
+
+                    @media screen and (max-width: $md-breakpoint) {
+                        th {
+                            h3 {
+                                margin-bottom: 0 !important;
+                            }
+                           p {
+                            display: none;
+                           } 
+                        }
+                    }
+
+                }
+
                 width: 75%;
                 margin-left: auto;
 
-                @media screen and (max-width: $md-breakpoint) {
+                @media screen and (max-width: $tablet-breakpoint) {
                     & {
                         width: 100%;
                     }
                 }
 
-                tr {
+                thead {
+                    width: 100%;
+                    display: table;
 
-                    th {
-                        width: 33.33%;
-                        text-align: center;
-                        vertical-align: top;
-                        padding: 1rem;
-                        line-height: 1.6;
-                        border: 0 !important;
+                    tr {
 
-                        &.basic {
-                            border-radius: 15px 0 0 0;
-                            //background-color: rgba($mainColor, 0.33);
-                            background-color: #abd6ed;
-                        }
+                        th {
+                            width: 33.33%;
+                            text-align: center;
+                            vertical-align: top;
+                            padding: 1rem;
+                            line-height: 1.6;
+                            border: 0 !important;
+    
+                            &.basic {
+                                border-radius: 15px 0 0 0;
+                                background-color: #abd6ed;
+                            }
+    
+                            &.standard {
+                                background-color: #57acdb;
+                            }
+    
+                            &.premium {
+                                border-radius: 0 15px 0 0;
+                                background-color: $mainColor;
+                                color: #fff;
+                            }
+                            
 
-                        &.standard {
-                            //background-color: rgba($mainColor, 0.66);
-                            background-color: #57acdb;
-                        }
-
-                        &.premium {
-                            border-radius: 0 15px 0 0;
-                            background-color: $mainColor;
-                            color: #fff;
-                        }
-
-                        h3 {
-                            margin-bottom: 1rem;
-                            font-weight: bold;
-
+                            
                             @media screen and (max-width: $md-breakpoint) {
                                 & {
-                                    font-size: 19px;
+                                    padding: 10px 4px !important;
                                 }
                             }
 
-                        }
 
-                        p {
-                            font-weight: 500;
-                            @media screen and (max-width: $md-breakpoint) {
-                                & {
-                                    font-size: 12px;
+                            h3 {
+                                margin-bottom: 1rem;
+                                font-weight: bold;
+    
+                                @media screen and (max-width: $md-breakpoint) {
+                                    & {
+                                        font-size: 16px;
+                                    }
+                                }
+    
+                            }
+    
+                            p {
+                                font-weight: 500;
+                                @media screen and (max-width: $md-breakpoint) {
+                                    & {
+                                        font-size: 12px;
+                                    }
                                 }
                             }
+    
                         }
-
                     }
+
                 }
+
+                
 
 
                 &.with_ultimate { // temp
@@ -10989,7 +11090,7 @@ ul.upgrade_path_list {
                     width: 80%;
                     margin-left: auto;
     
-                    @media screen and (max-width: $md-breakpoint) {
+                    @media screen and (max-width: $tablet-breakpoint) {
                         & {
                             width: 100%;
                         }
@@ -11015,12 +11116,7 @@ ul.upgrade_path_list {
                             }
                             
                             &.premium {
-                                //border-radius: 0 15px 0 0;
-                                //background-color: $mainColor;
-                                //background-color: #57acdb;
-                                //color: #fff;
                                 border-radius: 0 !important;
-                                //background-color: $lightColor;
                                 background-color: #389dd5;
                             }
 
@@ -11029,14 +11125,21 @@ ul.upgrade_path_list {
                                 background-color: $mainColor;
                                 color: #fff;
                             }
-    
+                            
+                            @media screen and (max-width: $md-breakpoint) {
+                                & {
+                                    padding: 10px 4px !important;
+                                }
+                            }
+
+
                             h3 {
                                 margin-bottom: 1rem;
                                 font-weight: bold;
     
                                 @media screen and (max-width: $md-breakpoint) {
                                     & {
-                                        font-size: 19px;
+                                        font-size: 16px;
                                     }
                                 }
     
@@ -14920,36 +15023,40 @@ ul.blog_social_links {
     margin: auto;
 }
 
-
 .nc_images_radio_buttons {
+
+    .nf-field-label{
+        margin: auto;
+    }
 
     ul {
         padding: 0;
-        margin-top: 1.5rem;
+        margin-top: 1rem;
         display: block !important;
         text-align: center;
 
         li {
-            width: 45% !important;
-            display: inline-block;
-            margin: 15px !important;
+            width: 23% !important;
+            display: inline-flex;
             height: auto !important;
+            margin: 5px !important;
             
-            @media screen and (max-width: 650px) {
+            @media screen and (min-width: $sm-breakpoint) and (max-width:$md-breakpoint) {
+                & {
+                    width: 46% !important;
+                }
+            }
+
+
+            @media screen and (max-width: $sm-breakpoint) {
                 & {
                     width: 90% !important;
                 }
             }
 
-            &:not(:last-child) {
-                label {
-                    margin-right: 1rem !important;
-                }
-            }
-
             label {
                 width: 100%;
-                font-size: 1.3em;
+                //font-size: 1.3em;
                 text-align: center;
                 font-weight: bold;
                 padding: 1rem;
@@ -14958,14 +15065,13 @@ ul.blog_social_links {
                 border: 0;
                 cursor: pointer;
                 transition: all .3s ease;
-                
-                
-                
+                font-size: 16px;
+                word-wrap: break-word;
 
                 img {
                     margin-top: 1.5rem;
-                    max-width: 80px !important;
-                    max-height: 55px;
+                    max-width: 74px !important;
+                    max-height: 45px;
                     margin-left: auto;
                     margin-right: auto;
                 }
@@ -14983,20 +15089,100 @@ ul.blog_social_links {
                         content: "\f058";
                         font-family: "Font Awesome 5 Free";
                         font-weight: 900;
-                        color: #0082c9;
-                        right: -6px;
-                        top: -6px;
+                        color: $mainColor;
+                        right: -8px;
+                        top: -8px;
                         font-size: 1.2em;
+                        background: #fff;
+                        border: 2px solid white;
+                        border-radius: 50%;
+                    }
+                }
+            }
+
+        }
+
+    }
+
+    &.sector {
+        ul {
+            li {
+                &:not(:last-child) {
+                    min-height: 144px;
+                }
+
+                &:last-child {
+                    width: 33% !important;
+
+                    img {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+
+    &.plan {
+        ul {
+            li {
+
+                &:first-child {
+                    label {
+                        background-color: $communityColor;
+
+                        &:hover {
+                            background-color: $mainColor;
+                            color: #fff;
+                        }
                     }
                 }
 
+                &:nth-child(2) {
+                    label {
+                        background-color: #abd6ed;
 
-                
+                        &:hover {
+                            background-color: $mainColor;
+                            color: #fff;
+                        }
+                    }
+                }
+
+                &:nth-child(3) {
+                    label {
+                        background-color: #389dd5;
+                        color: #fff;
+
+                        &:hover {
+                            background-color: $mainColor;
+                        }
+                    }
+                }
+
+                &:last-child {
+                    label {
+                        background-color: $mainColor;
+                        color: #fff;
+
+                        &:hover {
+                            background-color: #fff;
+                            color: $mainColor;
+                        }
+
+                    }
+                }
+
+                label {
+                    img {
+                        display: none;
+                    }
+                }
+
             }
         }
-
-
     }
+
+
 }
 
 
