--- a/assets/home.scss
+++ b/assets/home.scss
@@ -1109,6 +1109,12 @@
             display: block;
         }
 
+        .wpb_single_image {
+            a {
+                display: block;
+            }
+        }
+
 
         .feature_list {
             margin-top: 1rem;
